[package]
name = "block_golf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "0.8"
itertools = "0.10.3"
heron = { version = "3.1", features = ["2d"] }
bevy_prototype_lyon = "0.5"
